--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ background-position: 0 0,20px 20px;
     width: 100%;
     bottom: 0;
     left: 0;
-    background: rgb(220, 223, 38);
+    background: rgb(133, 151, 136);
     z-index: -1;
     clip-path: polygon(0 0, 100% 0%, 100% 5%, 0 5%);
 }
@@ -118,3 +118,59 @@ background-position: 0 0,20px 20px;
     border-bottom: 5px solid #95b1a4;
     --padding-container: 20px 0 60px;
 }
+
+.alumno__container{
+    width: 70%;
+    margin: auto;
+}
+
+.alumno__name{
+    margin: 20px 0;
+
+}
+
+.alumno__tag{
+    font-weight: 700;
+    color: var(--color-primary);
+    margin-bottom: 20px;
+}
+
+.alumno__paragraph{
+    text-align: left;
+    line-height: 1.5;
+    font-style: italic;
+    color: #615a5a;
+
+}
+
+.alumno__img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;}
+    objet-fit: cover;
+    objet-position: top;
+}
+
+/* about */
+
+.about{
+    display: grid;
+    grid-template-columns: 5fr 4fr;
+    place-items: center;
+}
+
+.about__course{
+    width: 90%;
+}
+
+.about__picture{
+    align-items: right;
+    width: 50;
+    height: 50;
+}
+.about__paragraph{
+    margin: 20px 0;
+    line-height: 1.5;
+    font-weight: 300;
+}
+
